fix(QInput): prevent problems with cordova on iOS #13653

--- a/ui/src/components/field/QField.sass
+++ b/ui/src/components/field/QField.sass
@@ -126,6 +126,7 @@ $field-transition-label-right-up: .324s cubic-bezier(.4,0,.2,1)
     width: 100%
     min-width: 0 // needed for FF
     outline: 0 !important // needed for FF
+    user-select: auto
 
     &:-webkit-autofill
       -webkit-animation-name: q-autofill
